fixed spacing on timeline

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -152,7 +152,7 @@
 /* Timeline */
 .use-cases-section {
     position: relative;
-    padding-bottom: 20px;
+    padding-bottom: 270px;
 }
 
 .timeline {
